--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "@samtgarson/eslint-config",
-  "version": "0.0.2",
+  "version": "1.0.0",
   "description": "Eslint config",
   "main": "index.js",
   "repository": "https://github.com/samtgarson/eslint-config",
   "license": "MIT",
   "author": "samtgarson@gmail.com",
-  "dependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint-config-airbnb": "^15.1.0",
-    "eslint-import-resolver-jest": "^2.1.1",
-    "eslint-plugin-html": "^3.2.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jest": "^20.0.3",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.4.1",
-    "eslint-plugin-vue": "beta"
-  },
   "peerDependencies": {
-    "eslint": ">= 4"
+    "babel-eslint": "^7.2.3",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-import-resolver-jest": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-vue": "5.0.0",
+    "eslint": ">= 5"
+  },
+  "dependencies": {
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.11.1",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-import-resolver-jest": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^22.1.2",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-vue": "^5.0.0"
   }
 }
