--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samtgarson/eslint-config",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "description": "Eslint config",
   "main": "index.js",
   "repository": "https://github.com/samtgarson/eslint-config",
@@ -9,5 +9,9 @@
   "peerDependencies": {
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-promise": "^4.2.1"
+  },
+  "optionalDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0"
   }
 }
