Remove space-before-function-param due to prettier

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samtgarson/eslint-config",
-  "version": "2.6.1",
+  "version": "2.7.0",
   "description": "Eslint config",
   "main": "index.js",
   "repository": "https://github.com/samtgarson/eslint-config",
@@ -12,10 +12,10 @@
     "eslint-plugin-promise": "*"
   },
   "optionalDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "typescript": "^4.1.3"
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
+    "eslint-plugin-react": "*",
+    "eslint-plugin-react-hooks": "*",
+    "typescript": "*"
   }
 }
