--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samtgarson/eslint-config",
-  "version": "3.2.5",
+  "version": "3.2.8",
   "description": "Eslint config",
   "main": "index.mjs",
   "repository": "https://github.com/samtgarson/eslint-config",
@@ -11,9 +11,11 @@
     "@eslint/js": "*",
     "eslint": "*",
     "eslint-plugin-import-x": "*",
-    "eslint-plugin-promise": "*"
+    "eslint-plugin-promise": "*",
+    "prettier-plugin-organize-imports": "*"
   },
   "optionalDependencies": {
+    "@stylistic/eslint-plugin": "*",
     "eslint-plugin-react": "*",
     "eslint-plugin-react-hooks": "*",
     "eslint-import-resolver-typescript": "*",
